Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </div>
 
             <!-- Nombre -->
-            <h1 class="name">FRAY KANACHULLO</h1>
+            <h1 class="name">FRAY BENJAMIN  KANA CHULLO</h1>
             <p class="position">INGENIERO EN SISTEMAS</p>
 
             <!-- Contacto -->
